fixed spacing for code snippets

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -4,7 +4,7 @@ styles: true
 ---
 
 .highlight {
-	line-height: 40%;
+	line-height: 60%;
 }
 
 @import "alembic";
